--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,22 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  
+
+}
+
+.images {
+display: flex;
+justify-content: center;
+gap: 16px;
+
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +26,15 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+
+}
+
+.one,
+.two,
+.three,
+.four {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
